Correção imagem hover

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -18,7 +18,10 @@
 <body>
   <main class="main">
     <figure class="img">
-      <img src="images/image-equilibrium.jpg" alt="">
+      <img src="images/image-equilibrium.jpg" alt="Equilibrium">
+      <div class="img-overlay">
+        <img id="icon-view" src="images/icon-view.svg" alt="">
+      </div>
     </figure>
     <section class="txt">
       <h1>Equilibrium #3429</h1>
